c4prj2_input/grade.txt
Grading at Thu Mar 11 09:29:29 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c:28:3: error: expected identifier or ‘(’ before ‘return’
   return hand;
   ^
input.c:29:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
input.c: In function ‘hand_from_string’:
input.c:27:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
